--- a/AcademicReward/AppShell.xaml
+++ b/AcademicReward/AppShell.xaml
@@ -7,6 +7,10 @@
     xmlns:views="clr-namespace:AcademicReward.Views"
     Shell.FlyoutBehavior="Disabled">
 
+    <!-- Primary Author: Generated File -->
+    <!-- Secondary Author: Wil LaLonde -->
+    <!-- Reviewer: Xee Lo -->
+
     <ShellContent 
         Title="Login"
         ContentTemplate="{DataTemplate views:LoginPage}"
