--- a/AcademicReward/PopUps/TaskPopup.xaml
+++ b/AcademicReward/PopUps/TaskPopup.xaml
@@ -4,6 +4,10 @@
                xmlns:toolkit="http://schemas.microsoft.com/dotnet/2022/maui/toolkit" 
                x:Class="AcademicReward.PopUps.TaskPopUp"
                CanBeDismissedByTappingOutsideOfPopup="False">
+    <!-- Primary Author: Xee Lo -->
+    <!-- Secondary Author: Wil LaLonde -->
+    <!-- Reviewer: Wil LaLonde -->
+
     <!--Layout of the popup-->
     <StackLayout Margin="25" WidthRequest="600" HeightRequest="800" BackgroundColor="White">
      <!--Layout of the popup-->
