--- a/AcademicReward/Views/EditProfilePage.xaml
+++ b/AcademicReward/Views/EditProfilePage.xaml
@@ -3,7 +3,9 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="AcademicReward.Views.EditProfilePage"
              Title="Edit Profile">
-
+    <!-- Primary Author: Maximilian Patterson -->
+    <!-- Secondary Author: Wil LaLonde -->
+    <!-- Reviewer: Wil LaLonde -->
     <ScrollView>
         <StackLayout Margin="25">
             <Frame BorderColor="{StaticResource BlueButton}">
