--- a/AcademicReward/Views/HomePage.xaml
+++ b/AcademicReward/Views/HomePage.xaml
@@ -3,6 +3,9 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="AcademicReward.Views.HomePage"
              Title="Home">
+    <!-- Primary Author: Xee Lo -->
+    <!-- Secondary Author: None -->
+    <!-- Reviewer: Wil LaLonde -->
     <ScrollView>
         <StackLayout Grid.Row="0" Grid.Column="0" Margin="10" HorizontalOptions="StartAndExpand">
 
