--- a/AcademicReward/Views/NotificationPage.xaml
+++ b/AcademicReward/Views/NotificationPage.xaml
@@ -3,6 +3,9 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="AcademicReward.Views.NotificationPage"
              Title="Notification">
+    <!-- Primary Author: Wil LaLonde -->
+    <!-- Secondary Author: None -->
+    <!-- Reviewer: Maximilian Patterson -->
     <ScrollView>
         <StackLayout Margin="20">
             <Frame BorderColor="{StaticResource BlueButton}">
