--- a/AcademicReward/Views/TaskPage.xaml
+++ b/AcademicReward/Views/TaskPage.xaml
@@ -3,6 +3,9 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="AcademicReward.Views.TaskPage"
              Title="Task">
+    <!-- Primary Author: Wil LaLonde -->
+    <!-- Secondary Author: None -->
+    <!-- Reviewer: Xee Lo -->
     <ScrollView>
         <StackLayout Margin="20">
             <Frame BorderColor="{StaticResource BlueButton}">
