--- a/AcademicReward/PopUps/AddTaskPopUp.xaml
+++ b/AcademicReward/PopUps/AddTaskPopUp.xaml
@@ -3,8 +3,7 @@
                xmlns:toolkit="http://schemas.microsoft.com/dotnet/2022/maui/toolkit" 
                x:Class="AcademicReward.PopUps.AddTaskPopUp"
                CanBeDismissedByTappingOutsideOfPopup="False"
-               Color="White"
-               Size="600, 1000">
+               Size="600, 1000"
                Color="White">
     <!-- Primary Author: Wil LaLonde -->
     <!-- Secondary Author: None -->
