--- a/AcademicReward/Views/NotificationPage.xaml
+++ b/AcademicReward/Views/NotificationPage.xaml
@@ -28,7 +28,7 @@
             <StackLayout Margin="0, 20">
                 <Frame BorderColor="Black" CornerRadius="0" Padding="0">
                     <!-- Will need to add some binding here -->
-                    <ListView x:Name="NotificationList" SeparatorColor="Black" MaximumHeightRequest="320">
+                    <ListView x:Name="NotificationList" ItemSelected="SelectedNotification" SeparatorColor="Black" MaximumHeightRequest="900">
                         <ListView.ItemTemplate>
                             <DataTemplate>
                                 <ViewCell>
@@ -42,7 +42,7 @@
                                         <Label 
                                             Grid.Row="0" 
                                             Grid.Column="0" 
-                                            Text="Some value here"
+                                            Text="{Binding Title}"
                                             FontSize="25"
                                             Padding="5"
                                             VerticalOptions="Center"/>
