--- a/AcademicReward/Views/ShopPage.xaml
+++ b/AcademicReward/Views/ShopPage.xaml
@@ -38,48 +38,29 @@
                 </StackLayout>
             </Frame>
             <Frame BorderColor="Black" CornerRadius="0" Margin="0, 10">
-                <Grid>
-                    <Grid.RowDefinitions>
-                        <RowDefinition Height="*"/>
-                        <RowDefinition Height="*"/>
-                    </Grid.RowDefinitions>
-                    <Grid.ColumnDefinitions>
-                        <ColumnDefinition Width="*"/>
-                        <ColumnDefinition Width="*"/>
-                    </Grid.ColumnDefinitions>
-                    <Frame Margin="10" BorderColor="{StaticResource BlueButton}" Grid.Row="0" Grid.Column="0">
-                        <ImageButton 
-                            Grid.Row="0"
-                            Grid.Column="0"
-                            Source="shirt.png"
-                            Clicked="Shirt_Clicked"
-                            Scale="0.75"/>
-                    </Frame>
-                    <Frame Margin="10" BorderColor="{StaticResource BlueButton}" Grid.Row="0" Grid.Column="1">
-                        <ImageButton
-                        Grid.Row="0"
-                        Grid.Column="1"
-                        Source="shopdemoticket.png"
-                        Clicked="Ticket_Clicked"
-                        Scale="0.75"/>
-                    </Frame>
-                    <Frame Margin="10" BorderColor="{StaticResource BlueButton}" Grid.Row="1" Grid.Column="0">
-                        <ImageButton 
-                            Grid.Row="1"
-                            Grid.Column="0"
-                            Source="shopdemoticket.png"
-                            Clicked="Ticket_Clicked"
-                            Scale="0.75"/>
-                    </Frame>
-                    <Frame Margin="10" BorderColor="{StaticResource BlueButton}" Grid.Row="1" Grid.Column="1">
-                        <ImageButton
-                            Grid.Row="1"
-                            Grid.Column="1"
-                            Source="shirt.png"
-                            Clicked="Shirt_Clicked"
-                            Scale="0.75"/>
-                    </Frame>
-                </Grid>
+                <ListView x:Name="ShopItemList" ItemSelected="SelectedItem" SeparatorColor="Black" MaximumHeightRequest="900">
+                    <ListView.ItemTemplate>
+                        <DataTemplate>
+                            <ViewCell>
+                                <Grid>
+                                    <Grid.RowDefinitions>
+                                        <RowDefinition Height="Auto"/>
+                                    </Grid.RowDefinitions>
+                                    <Grid.ColumnDefinitions>
+                                        <ColumnDefinition Width="*"/>
+                                    </Grid.ColumnDefinitions>
+                                    <Label 
+                                            Grid.Row="0" 
+                                            Grid.Column="0" 
+                                            Text="{Binding Title}"
+                                            FontSize="25"
+                                            Padding="5"
+                                            VerticalOptions="Center"/>
+                                </Grid>
+                            </ViewCell>
+                        </DataTemplate>
+                    </ListView.ItemTemplate>
+                </ListView>
             </Frame>
         </StackLayout>
     </ScrollView>
