Refactor variable names, interface change + nessessary refactoring (LoadItems()), history model

--- a/AcademicReward/Views/HistoryPage.xaml
+++ b/AcademicReward/Views/HistoryPage.xaml
@@ -28,8 +28,8 @@
                     <ListView.ItemTemplate>
                         <DataTemplate>
                             <TextCell 
-                                Text="{Binding title}" 
-                                Detail="{Binding description}"/>
+                                Text="{Binding Title}" 
+                                Detail="{Binding Description}"/>
                         </DataTemplate>
                     </ListView.ItemTemplate>
                 </ListView>
