--- a/AcademicReward/Views/HomePage.xaml
+++ b/AcademicReward/Views/HomePage.xaml
@@ -7,22 +7,52 @@
     <!-- Secondary Author: None -->
     <!-- Reviewer: Wil LaLonde -->
     <ScrollView>
-        <StackLayout Grid.Row="0" Grid.Column="0" Margin="10" HorizontalOptions="StartAndExpand">
+        <StackLayout Margin="25">
+            <!--.Row="0" Grid.Column="0" Margin="10" HorizontalOptions="StartAndExpand">-->
 
-            <Label
-                Text="UserName" FontSize="50" HorizontalOptions="Center" Padding="20" FontAttributes="Bold"/>
+            <!--ui display for member-->
+            <Frame BorderColor="{StaticResource BlueButton}">
+                <StackLayout>
 
-            <!--This is the line that is right under the Username -->
-            <Line X1="0" Y1="0" X2="1000" Y2="0" Stroke="Black"/>
-            <!--This is the line that is right under the Username -->
+                    <StackLayout Orientation="Horizontal">
+                        <StackLayout Orientation="Vertical" HorizontalOptions="Start" Margin="0, 10">
+                            <Label
+                                x:Name="username"
+                                Text="Username: John Doe"
+                                FontSize="45"
+                                FontAttributes="Bold"/>
+                            <Label
+                                x:Name="points"
+                                Text="Points: 46"
+                                FontSize="35"
+                                FontFamily="SecondaryFont"
+                                TextColor="{StaticResource Gray600}"/>
+                        </StackLayout>
+                        <StackLayout Orientation="Vertical" HorizontalOptions="EndAndExpand" Margin="0, 10">
+                            <Label
+                                x:Name="level"
+                                Text="Level 1"
+                                FontSize="45"/>
+                        </StackLayout>
+
+
+                    </StackLayout>
+                    <ProgressBar x:Name="progressBar" Progress="0.75" ProgressColor="{StaticResource BlueButton}"/>
+                    <Label
+                        x:Name="exp"
+                        Text="XP: 75/100"
+                        FontSize="20"
+                        Margin="0, 5"/>
+                </StackLayout>
+            </Frame>
 
             <VerticalStackLayout Padding="20">
-                <!--Borders the Listview-->
-                <Border Padding="10" StrokeThickness="2">
+                <!--Frame the Listview-->
+                <Frame BorderColor="{StaticResource BlueButton}">
                     <!--Listview-->
                     <ListView x:Name="TaskLV" HeightRequest="850" ItemSelected="SelectedTask" SeparatorColor="Black">
                         <ListView.Header>
-                            <StackLayout BackgroundColor="LightGray">
+                            <StackLayout BackgroundColor="{StaticResource BlueButton}">
                                 <Label Margin="10,10,0,0"
                                         Text="Task"
                                         FontSize="30"
@@ -60,8 +90,8 @@
                                     <Label Grid.Row="0" Grid.Column="4" Text="{Binding Description}" TextColor="Black" FontSize="20.0" Margin="0,10,20,0"/>
                                     <Label Grid.Row="0" Grid.Column="5" Text="Points:" TextColor="Black" FontSize="20.0" FontAttributes="Bold" Margin="0,10,20,0"/>
                                     <Label Grid.Row="0" Grid.Column="6" Text="{Binding Points}" TextColor="Black" FontSize="20.0" Margin="0,10,20,0"/>
-                                    <Label Grid.Row="0" Grid.Column="7" Text="Date: " TextColor="Black" FontSize="20.0" FontAttributes="Bold" Margin="0,10,20,0"/>
-                                    <Label Grid.Row="0" Grid.Column="8" Text="{Binding Date}" TextColor="Black" FontSize="20.0" Margin="0,10,20,0"/>
+                                    <Label Grid.Row="0" Grid.Column="7" Text="GroupID: " TextColor="Black" FontSize="20.0" FontAttributes="Bold" Margin="0,10,20,0"/>
+                                    <Label Grid.Row="0" Grid.Column="8" Text="{Binding GroupID}" TextColor="Black" FontSize="20.0" Margin="0,10,20,0"/>
 
 
                                 </Grid>
@@ -70,8 +100,8 @@
                     </ListView.ItemTemplate>
                 </ListView>
                 <!--Listview-->
-                </Border>
-                <!--Borders the Listview-->
+                </Frame>
+                <!--Frame the Listview-->
             </VerticalStackLayout>
 
         </StackLayout>
