--- a/AcademicReward/Views/HomePage.xaml
+++ b/AcademicReward/Views/HomePage.xaml
@@ -16,33 +16,51 @@
 
                     <StackLayout Orientation="Horizontal">
                         <StackLayout Orientation="Vertical" HorizontalOptions="Start" Margin="0, 10">
-                            <Label
-                                x:Name="username"
-                                Text="Username: John Doe"
-                                FontSize="45"
-                                FontAttributes="Bold"/>
-                            <Label
-                                x:Name="points"
-                                Text="Points: 46"
-                                FontSize="35"
-                                FontFamily="SecondaryFont"
-                                TextColor="{StaticResource Gray600}"/>
+                            <StackLayout Orientation="Horizontal">
+                                <Label
+                                    x:Name="UsernameLabel"
+                                    Text="Username: "
+                                    FontSize="45"
+                                    FontAttributes="Bold"/>
+                                <Label
+                                    x:Name="Username"
+                                    FontSize="45"
+                                    FontAttributes="Bold"/>
+                            </StackLayout>
+                            <StackLayout Orientation="Horizontal">
+                                <Label
+                                    x:Name="PointsLabel"
+                                    Text="Points: "
+                                    FontSize="35"/>
+                                <Label
+                                    x:Name="Points"
+                                    FontSize="35"/>
+                            </StackLayout>
                         </StackLayout>
                         <StackLayout Orientation="Vertical" HorizontalOptions="EndAndExpand" Margin="0, 10">
-                            <Label
-                                x:Name="level"
-                                Text="Level 1"
-                                FontSize="45"/>
+                            <StackLayout Orientation="Horizontal">
+                                <Label
+                                    x:Name="LevelLabel"
+                                    Text="Lvl "
+                                    FontSize="45"/>
+                                <Label
+                                    x:Name="Level"
+                                    FontSize="45"/>
+                            </StackLayout>
                         </StackLayout>
-
-
                     </StackLayout>
-                    <ProgressBar x:Name="progressBar" Progress="0.75" ProgressColor="{StaticResource BlueButton}"/>
-                    <Label
-                        x:Name="exp"
-                        Text="XP: 75/100"
-                        FontSize="20"
-                        Margin="0, 5"/>
+                    <ProgressBar x:Name="ProgressBar" ProgressColor="{StaticResource BlueButton}"/>
+                    <StackLayout Orientation="Horizontal">
+                        <Label
+                            x:Name="ExpLabel"
+                            Text="XP: "
+                            FontSize="20"
+                            Margin="0, 5"/>
+                        <Label
+                            x:Name="Exp"
+                            FontSize="20"
+                            Margin="0, 5"/>
+                    </StackLayout>
                 </StackLayout>
             </Frame>
 
