--- a/AcademicReward/Views/CreateGroupPage.xaml
+++ b/AcademicReward/Views/CreateGroupPage.xaml
@@ -31,7 +31,7 @@
                     FontAttributes="Bold"
                     VerticalOptions="Center"/>
                 <Frame BackgroundColor="{StaticResource Gray200}" Margin="0, 5" BorderColor="{StaticResource Gray200}">
-                    <Entry FontSize="22" Placeholder="Eg. Group 1" PlaceholderColor="{StaticResource Gray400}" BackgroundColor="{StaticResource Gray200}"/>
+                    <Entry x:Name="GroupNameEntry" FontSize="22" Placeholder="Eg. Group 1" PlaceholderColor="{StaticResource Gray400}" BackgroundColor="{StaticResource Gray200}"/>
                 </Frame>
                 <Label
                     Text="Description:"
@@ -40,13 +40,14 @@
                     FontAttributes="Bold"
                     VerticalOptions="Center"/>
                 <Frame BackgroundColor="{StaticResource Gray200}" Margin="0, 5" BorderColor="{StaticResource Gray200}">
-                    <Entry FontSize="22" Placeholder="Eg. This is a sample group" PlaceholderColor="{StaticResource Gray400}" BackgroundColor="{StaticResource Gray200}"/>
+                    <Entry x:Name="GroupDescriptionEntry" FontSize="22" Placeholder="Eg. This is a sample group" PlaceholderColor="{StaticResource Gray400}" BackgroundColor="{StaticResource Gray200}"/>
                 </Frame>
                 <Button 
                     Text="Create Group" 
                     FontSize="25"
                     FontFamily="BoldFont"
-                    Margin="100, 45"/>
+                    Margin="100, 45"
+                    Clicked="CreateGroupButtonClicked"/>
             </StackLayout>
         </StackLayout>
     </ScrollView>
