--- a/AcademicReward/Views/HomePage.xaml
+++ b/AcademicReward/Views/HomePage.xaml
@@ -101,7 +101,7 @@
 
                                     </Grid.ColumnDefinitions>
                                     <!--This is displaying the Checkbox and Task object with correct attributes-->
-                                    <CheckBox x:Name="checkBox3" Color="Black" CheckedChanged="TaskCheckBox" Margin="0,0,20,0" Grid.Row="0" Grid.Column="0"  />
+                                    <CheckBox x:Name="checkBox3" Color="Black" Margin="0,0,20,0" Grid.Row="0" Grid.Column="0"  />
                                     <Label Grid.Row="0" Grid.Column="1" Text="Title: " TextColor="Black" FontSize="20.0" FontAttributes="Bold" Margin="0,10,20,0"/>
                                     <Label Grid.Row="0" Grid.Column="2" Text="{Binding Title}" TextColor="Black" FontSize="20.0" Margin="0,10,20,0"/>
                                     <Label Grid.Row="0" Grid.Column="3" Text="Description: " TextColor="Black" FontSize="20.0" FontAttributes="Bold" Margin="0,10,20,0"/>
