--- a/AcademicReward/Views/CreateGroupPage.xaml
+++ b/AcademicReward/Views/CreateGroupPage.xaml
@@ -23,8 +23,21 @@
                         TextColor="{StaticResource Gray600}"/>
                 </StackLayout>
             </Frame>
+            <Frame x:Name="ErrorFrame" BackgroundColor="{StaticResource ErrorBackgroundColor}" BorderColor="{StaticResource ErrorBorderColor}"  Margin="0, 10, 0, 0">
+                <StackLayout x:Name="ErrorStackLayout">
+                    <Label
+                        Text="Error with group creation: "
+                        x:Name="ErrorMessageHeader"
+                        FontSize="22"
+                        Margin="0, 5"
+                        FontAttributes="Bold"/>
+                    <Label
+                        Text=""
+                        x:Name="ErrorMessageBody"
+                        FontSize="20"/>
+                </StackLayout>
+            </Frame>
             <StackLayout Margin="0, 20">
-                <Label x:Name="ErrorLabel" Text="" FontSize="20" FontAttributes="Bold" TextColor="Red" VerticalOptions="End" Margin="0, 0, 0, 10"/>
                 <Label
                     Text="Group Name:"
                     FontSize="26"
