--- a/AcademicReward/Views/HomePage.xaml
+++ b/AcademicReward/Views/HomePage.xaml
@@ -103,10 +103,10 @@
 
                                     </Grid.ColumnDefinitions>
                                     <!--This is displaying the Checkbox and Task object with correct attributes-->
-                                        <CheckBox x:Name="MyCheckBox" IsChecked="{Binding IsSubmitted}" IsVisible="{Binding IsEnabled}" Color="Blue" Margin="0,0,20,0" Grid.Row="0" Grid.Column="0"  />
+                                    <CheckBox x:Name="MyCheckBox" IsChecked="{Binding IsSubmitted}" Color="Blue" Margin="0,0,20,0" Grid.Row="0" Grid.Column="0"  />
 
-                                        <Label Grid.Row="0" Grid.Column="1" Text="Title: " TextColor="Black" FontSize="20.0" FontAttributes="Bold" Margin="0,10,20,0"/>
-                                     <Label Grid.Row="0" Grid.Column="2" Text="{Binding Title}" TextColor="Black" FontSize="20.0" Margin="0,10,20,0"/>
+                                    <Label Grid.Row="0" Grid.Column="1" Text="Title: " TextColor="Black" FontSize="20.0" FontAttributes="Bold" Margin="0,10,20,0"/>
+                                    <Label Grid.Row="0" Grid.Column="2" Text="{Binding Title}" TextColor="Black" FontSize="20.0" Margin="0,10,20,0"/>
                                     <Label Grid.Row="0" Grid.Column="3" Text="Description: " TextColor="Black" FontSize="20.0" FontAttributes="Bold" Margin="0,10,20,0"/>
                                     <Label Grid.Row="0" Grid.Column="4" Text="{Binding Description}" TextColor="Black" FontSize="20.0" Margin="0,10,20,0"/>
                                     <Label Grid.Row="0" Grid.Column="5" Text="Points:" TextColor="Black" FontSize="20.0" FontAttributes="Bold" Margin="0,10,20,0"/>
