--- a/AcademicReward/Views/ViewShopItemPage.xaml
+++ b/AcademicReward/Views/ViewShopItemPage.xaml
@@ -4,7 +4,8 @@
             xmlns:mct="http://schemas.microsoft.com/dotnet/2022/maui/toolkit"
             x:Class="AcademicReward.ViewShopItemPage"
             CanBeDismissedByTappingOutsideOfPopup="False"
-            Color="White">
+            Color="White"
+            Size="600, 1100">
     <!-- Primary Author: Sean Stille -->
     <!-- Secondary Author: Wil LaLonde -->
     <!-- Reviewer: Wil LaLonde -->
@@ -28,22 +29,27 @@
             </Frame>
         </StackLayout>
         <StackLayout Margin="10" HorizontalOptions="Center">
-            <Frame BorderColor="Black" CornerRadius="0" Padding="0">
+            <Frame BorderColor="Black" CornerRadius="0" Padding="0" MaximumHeightRequest="350" MinimumHeightRequest="350">
                 <Image
                     Source="shop.png"
                     Scale="0.5"/>
             </Frame>
         </StackLayout>
+        <Frame x:Name="ErrorFrame" BackgroundColor="{StaticResource ErrorBackgroundColor}" BorderColor="{StaticResource ErrorBorderColor}"  Margin="10, 0">
+            <StackLayout x:Name="ErrorStackLayout">
+                <Label
+                    Text="Error while buying shop item: "
+                    x:Name="ErrorMessageHeader"
+                    FontSize="22"
+                    Margin="0, 5"
+                    FontAttributes="Bold"/>
+                <Label
+                    Text=""
+                    x:Name="ErrorMessageBody"
+                    FontSize="20"/>
+            </StackLayout>
+        </Frame>
         <StackLayout Margin="10">
-            <Label
-                Text="Item Cost: "
-                FontSize="22"
-                Margin="0, 5"
-                FontAttributes="Bold"
-                VerticalOptions="Center"/>
-            <Frame BackgroundColor="{StaticResource Gray200}" BorderColor="{StaticResource Gray200}" Margin="0, 5">
-                <Label x:Name="Cost" FontSize="20" BackgroundColor="{StaticResource Gray200}"/>
-            </Frame>
             <Label
                 Text="Item Description: "
                 FontSize="22"
@@ -52,6 +58,24 @@
                 VerticalOptions="Center"/>
             <Frame BackgroundColor="{StaticResource Gray200}" BorderColor="{StaticResource Gray200}" Margin="0, 5">
                 <Label x:Name="Desc" FontSize="20" BackgroundColor="{StaticResource Gray200}"/>
+            </Frame>
+            <Label
+                Text="Level Requirement: "
+                FontSize="22"
+                Margin="0, 5"
+                FontAttributes="Bold"
+                VerticalOptions="Center"/>
+            <Frame BackgroundColor="{StaticResource Gray200}" BorderColor="{StaticResource Gray200}" Margin="0, 5">
+                <Label x:Name="LevelRequirement" FontSize="20" BackgroundColor="{StaticResource Gray200}"/>
+            </Frame>
+            <Label
+                Text="Item Cost: "
+                FontSize="22"
+                Margin="0, 5"
+                FontAttributes="Bold"
+                VerticalOptions="Center"/>
+            <Frame BackgroundColor="{StaticResource Gray200}" BorderColor="{StaticResource Gray200}" Margin="0, 5">
+                <Label x:Name="Cost" FontSize="20" BackgroundColor="{StaticResource Gray200}"/>
             </Frame>
         </StackLayout>
         <StackLayout VerticalOptions="EndAndExpand" HorizontalOptions="Center" Margin="10" Orientation="Horizontal">
@@ -65,7 +89,7 @@
                 Margin="10, 0"/>
             <Button 
                 x:Name="EditButton"
-                Text="Edit" 
+                Text="Update" 
                 Clicked="EditClicked"
                 FontSize="25"
                 FontFamily="BoldFont"
